--- a/forgot.html
+++ b/forgot.html
@@ -43,21 +43,20 @@
 
     <!---------------Form--------------->
     <div class="container-two">
+        <div class="marginTop"></div>
         <div class="container-two-one">
-            <div class="container-two-onee">
-                <div class="two-one-run">
-                    <p class="p-one">Reset Password</p>
-                    <hr class="hr-one">
-                    <form>
-                        <p class="p-two">EMAIL</p>
-                        <input type="email" placeholder="Enter your email" class="contain-one">
-                        <hr class="hr-two">
-                        <input type="submit" value="SEND VERIFICATION EMAIL" class="contain-two">
-                        <div class="a-one">
-                            <a href="index.html">Login</a>
-                        </div>
-                    </form>
-                </div>
+            <div class="two-one-run">
+                <p class="p-one">Reset Password</p>
+                <hr class="hr-one">
+                <form>
+                    <p class="p-two">EMAIL</p>
+                    <input type="email" placeholder="Enter your email" class="contain-one">
+                    <hr class="hr-two">
+                    <input type="submit" value="SEND VERIFICATION EMAIL" class="contain-two">
+                    <div class="a-one">
+                        <a href="index.html">Login</a>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
